# Copyright 2023 The OpenXLA Authors
#
# Licensed under the Apache License v2.0 with LLVM Exceptions.
# See https://llvm.org/LICENSE.txt for license information.
# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception

package(
    default_visibility = ["//visibility:public"],
    features = ["layering_check"],
    licenses = ["notice"],  # Apache 2.0
)

# TODO(ezhulenev): Use `iree_compiler_cc_library` once build converter tool will
# support it.
cc_library(
    name = "HloToTriton",
    srcs = ["ConvertHloToTriton.cpp"],
    hdrs = ["ConvertHloToTriton.h"],
    deps = [
        "//compiler/src/openxla/compiler/nvgpu/Dialect/TritonFlow/IR",
        "@llvm-project//llvm:Support",
        "@llvm-project//mlir:IR",
        "@llvm-project//mlir:Pass",
        "@llvm-project//mlir:Transforms",
        "@stablehlo//:stablehlo_ops,
    ],
)

# TODO(ezhulenev): Use `iree_compiler_cc_library` once build converter tool will
# support it.
cc_library(
    name = "TritonToFlowDispatch",
    srcs = ["ConvertTritonToFlowDispatch.cpp"],
    hdrs = ["ConvertTritonToFlowDispatch.h"],
    deps = [
        # TODO(ezhulenev): Add bazel build for Triton.
        "//compiler/src/openxla/compiler/nvgpu/Dialect/TritonFlow/IR",
        "@iree_core//compiler/src/iree/compiler/Dialect/Flow/IR",
        "@iree_core//compiler/src/iree/compiler/Dialect/HAL/IR",
        "@iree_core//compiler/src/iree/compiler/Utils",
        "@llvm-project//llvm:Support",
        "@llvm-project//mlir:IR",
        "@llvm-project//mlir:Pass",
        "@llvm-project//mlir:Transforms",
    ],
)
